chore(config): Update plugin API endpoint to stats-api service

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ GIST_ID=your_gist_id_here
 GITHUB_TOKEN=your_github_token_here
 
 # 插件 API 地址（使用官方服务）
-VITE_PLUGIN_API_URL=https://plugin-api.vercel.app/api
+VITE_PLUGIN_API_URL=https://stats-api-nu.vercel.app/api
 
 # 如果你 fork 了项目并想使用自己的服务：
 # 1. 部署 plugin-api 到 Vercel
