--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "build:fast": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
-    "build:win": "npm run build && electron-builder --win --config.compression=maximum",
-    "build:mac": "npm run build && electron-builder --mac --config.compression=maximum",
-    "build:linux": "npm run build && electron-builder --linux --config.compression=maximum",
+    "build:win": "cross-env NODE_ENV=production npm run build && electron-builder --win --config.compression=maximum",
+    "build:mac": "cross-env NODE_ENV=production npm run build && electron-builder --mac --config.compression=maximum",
+    "build:linux": "cross-env NODE_ENV=production npm run build && electron-builder --linux --config.compression=maximum",
+    "build:prod": "cross-env NODE_ENV=production npm run build",
     "prepare": "husky",
     "upload:cos": "node scripts/upload-to-cos.js",
     "icons": "node scripts/generate-icons.mjs"
@@ -30,7 +31,6 @@
     "@radix-icons/vue": "^1.0.0",
     "adm-zip": "^0.5.10",
     "better-sqlite3": "^12.5.0",
-    "electron-updater": "^6.3.9",
     "file-icon": "^6.0.0",
     "get-installed-apps": "^1.1.1",
     "pino": "^10.1.0",
@@ -51,6 +51,7 @@
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-env": "^10.1.0",
     "electron": "^39.2.6",
     "electron-builder": "^26.0.12",
     "electron-vite": "^5.0.0",
