chore(build): Update NSIS installer configuration for better UX

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -42,6 +42,8 @@ nsis:
   shortcutName: ${productName}
   uninstallDisplayName: ${productName}
   createDesktopShortcut: always
+  oneClick: false
+  allowToChangeInstallationDirectory: true
 mac:
   icon: build/icon.icns
   category: public.app-category.developer-tools
