--- a/official-plugins/h5-formatter/package.json
+++ b/official-plugins/h5-formatter/package.json
@@ -10,9 +10,11 @@
   "keywords": [
     "h5",
     "html",
+    "css",
+    "javascript",
+    "format",
     "formatter",
-    "beautify",
-    "minify",
+    "prettier",
     "格式化",
     "压缩"
   ],
@@ -33,16 +35,27 @@
     "entry": "dist/index.html"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "highlight.js": "^11.10.0",
+    "lucide-vue-next": "^0.562.0",
     "prettier": "^3.4.2",
-    "vue": "^3.5.13"
+    "reka-ui": "^2.7.0",
+    "tailwind-merge": "^3.4.0",
+    "vue": "^3.5.13",
+    "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vueuse/core": "^14.1.0",
     "archiver": "^7.0.1",
-    "autoprefixer": "^10.4.23",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19",
+    "readable-stream": "^4.7.0",
+    "readdir-glob": "^2.0.1",
+    "tailwindcss": "^4.1.18",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.7.3",
     "vite": "^6.0.3"
   }
 }
