--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@radix-icons/vue": "^1.0.0",
     "adm-zip": "^0.5.10",
-    "better-sqlite3": "^12.5.0",
     "file-icon": "^6.0.0",
     "get-installed-apps": "^1.1.1",
+    "lmdb": "^3.4.4",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
     "pinyin-pro": "^3.27.0",
@@ -82,8 +82,11 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "better-sqlite3",
       "electron",
-      "esbuild"
+      "esbuild",
+      "lmdb",
+      "msgpackr-extract"
     ]
   },
   "lint-staged": {
