ci: Configure Windows build environment and native module support

--- a/package.json
+++ b/package.json
@@ -87,7 +87,19 @@
       "esbuild",
       "lmdb",
       "msgpackr-extract"
-    ]
+    ],
+    "patchedDependencies": {},
+    "supportedArchitectures": {
+      "os": [
+        "current"
+      ],
+      "cpu": [
+        "current"
+      ]
+    }
+  },
+  "electronRebuild": {
+    "force": true
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,vue}": [
