--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "npm run typecheck && electron-vite build",
     "build:fast": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
+    "rebuild": "electron-rebuild -f -w lmdb",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "cross-env NODE_ENV=production npm run build && electron-builder --win --config.compression=maximum",
     "build:mac": "cross-env NODE_ENV=production npm run build && electron-builder --mac --config.compression=maximum",
@@ -34,6 +35,7 @@
     "get-installed-apps": "^1.1.1",
     "lmdb": "^3.4.4",
     "pino": "^10.1.0",
+    "bindings": "^1.5.0",
     "pino-pretty": "^13.1.3",
     "pinyin-pro": "^3.27.0",
     "tailwindcss-animate": "^1.0.7",
@@ -43,7 +45,6 @@
     "@electron-toolkit/eslint-config-prettier": "3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.1.0",
     "@electron-toolkit/tsconfig": "^2.0.0",
-    "@electron/rebuild": "^3.7.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.19.1",
