ci: Enable npm rebuild in electron-builder configuration

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -74,7 +74,7 @@ linux:
   category: Utility
 appImage:
   artifactName: ${name}-${version}.${ext}
-npmRebuild: false
+npmRebuild: true
 publish:
   provider: github
   owner: t8y2
