--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -74,7 +74,8 @@ linux:
   category: Utility
 appImage:
   artifactName: ${name}-${version}.${ext}
-npmRebuild: true
+npmRebuild: false
+buildDependenciesFromSource: false
 publish:
   provider: github
   owner: t8y2
